--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.2.3"
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.63.15",
+    "babel-preset-expo": "^8.2.3",
+    "typescript": "^4.0.2"
   },
   "private": true
 }
